# autodl-skills

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  queue_submit.py  requirements-dev.txt  tsconfig.json
eval/: README.md
eval/skill-cases/: ambiguous-cloud-context-clarify.json  elastic-gpu-stock-region.json  elastic-legacy-cuda-migration.json  elastic-list-containers.json  elastic-queue-replicaset-dry-run.json  elastic-submission-error-recovery.json  elastic-token-precedence.json  pro-create-validation.json  pro-power-on-start-command.json  pro-release-workflow.json  pro-save-image.json  pro-status-dry-run.json  pro-token-precedence.json
scripts/: copy-dist.mjs
skills/: SKILL.md  api-reference.md  examples.md
skills/autodl/: .env.example  SKILL.md  api-reference.md  autodl.mjs  examples.md
skills/autodl-elastic-deploy/: .env.example  SKILL.md  api-reference.md  autodl-elastic.mjs  examples.md
skills/autodl-instance-pro/: .env.example  SKILL.md  api-reference.md  autodl-pro.mjs  examples.md
src/core/: cli.mts  errors.mts  http.mts  token.mts
src/elastic/: api.mts  cli.mts  queue.mts  schema.mts
src/main/: cli.mts
src/pro/: api.mts  cli.mts  schema.mts
tests/: __init__.py  conftest.py  test_api.py  test_dependencies.py  test_fetch_gpu_stock.py  test_fetch_images.py  test_main_flow.py  test_token_loader.py  test_utils.py  test_validate_schema.py
tests-ts/: core.test.mjs  elastic.test.mjs  hygiene.test.mjs  pro.test.mjs  skill-doc-quality.test.mjs  skill-eval-dataset.test.mjs
(+2 files in other folders)
